--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@biomejs/biome": "1.6.0",
-    "eslint": "^8.57.0",
-    "eslint-config-sheriff": "^18.2.0",
+    "@biomejs/biome": "^1.6.0",
+    "@sherifforg/types": "^3.1.1",
+    "eslint": "npm:eslint-ts-patch@8.57.0-0",
+    "eslint-config-sheriff": "^18.3.0",
     "eslint-define-config": "^2.1.0",
+    "eslint-ts-patch": "8.57.0-0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.6",
     "zod": "^3.22.4"
@@ -28,6 +30,7 @@
     "@types/suncalc": "^1.9.2",
     "date-fns": "^3.6.0",
     "lodash-es": "^4.17.21",
+    "preact": "^10.21.0",
     "suncalc": "^1.9.0"
   }
 }
