--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
+
+
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
@@ -27,6 +27,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src/**/*.ts", "src/ui.ts"]
 }
